@@ -1,3 +1,4 @@
+	* fix debug logging for banning web seeds
 	* improve support for de-selected files in full allocation mode
 	* fix dht_bootstrap_alert being posted
 	* SetFileValidData fix on windows (prevents zero-fill)
